--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script type="text/javascript">
   new TradingView.widget(
   {
+  "width": 400,
+  "length": 200,
   "autosize": true,
   "symbol": "KRAKEN:SOLEUR",
   "interval": "D",
