--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <html>
+
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div id="tradingview_27844"></div>
-  <div class="tradingview-widget-copyright"><a href="https://fr.tradingview.com/symbols/SOLEUR/?exchange=KRAKEN" rel="noopener" target="_blank"><span class="blue-text">SOLEUR graphique</span></a> par TradingView</div>
+  <div id="tradingview_3a17c"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/SOLEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">SOLEUR Chart</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
   "width": 400,
-  "length": 200,
-  "autosize": true,
-  "symbol": "KRAKEN:SOLEUR",
+  "height": 200,
+  "symbol": "BINANCE:SOLEUR",
   "interval": "D",
   "timezone": "Europe/Paris",
   "theme": "dark",
   "style": "2",
-  "locale": "fr",
+  "locale": "en",
   "toolbar_bg": "#f1f3f6",
   "enable_publishing": false,
   "hide_top_toolbar": true,
   "hide_legend": true,
   "save_image": false,
-  "container_id": "tradingview_27844"
+  "container_id": "tradingview_3a17c"
 }
   );
   </script>
 </div>
 <!-- TradingView Widget END -->
+
 </html>
